[gd_scene load_steps=4 format=3 uid="uid://cgnvp5bmtbpxr"]

[ext_resource type="Script" path="res://behaviours/move_towards.gd" id="1_demja"]
[ext_resource type="PackedScene" uid="uid://ctpn4hvkhxoi3" path="res://behaviours/tracker_edible.tscn" id="2_jlt4x"]
[ext_resource type="PackedScene" uid="uid://dti7l0d40hhgt" path="res://behaviours/target_picker.tscn" id="3_lfvrb"]

[node name="AIHunterLatest" type="Node2D"]

[node name="EdibleTracker" parent="." instance=ExtResource("2_jlt4x")]

[node name="TargetPicker" parent="." node_paths=PackedStringArray("tracker") instance=ExtResource("3_lfvrb")]
tracker = NodePath("../EdibleTracker")

[node name="MoveTowards" type="Node2D" parent="."]
script = ExtResource("1_demja")

[connection signal="tracked" from="EdibleTracker" to="TargetPicker" method="set_target"]
[connection signal="untracked" from="EdibleTracker" to="TargetPicker" method="clear_if_target"]
[connection signal="target_changed" from="TargetPicker" to="MoveTowards" method="set_target" unbinds=1]
