[gd_scene load_steps=2 format=3 uid="uid://cml7rqvyfuagx"]

[ext_resource type="Script" path="res://behaviours/move_towards.gd" id="1_256ue"]

[node name="MoveTowards" type="Node2D"]
script = ExtResource("1_256ue")

[connection signal="changed_target" from="." to="." method="_on_changed_target"]
